kubernetes/apps/home-automation/pihole3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole3
  labels:
    app: pihole3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole3
  template:
    metadata:
      labels:
        app: pihole3
    spec:
      containers:
      - name: pihole3
        image: docker.io/pihole/pihole:2023.02.2
        securityContext:
          capabilities:
            add:
            - SYS_PTRACE #Allowing gdb to debug the pihole-FTL process
        ports:
        - name: pihole-dns-udp
          containerPort: 53
          protocol: UDP
        - name: pihole-dns-tcp
          containerPort: 53
          protocol: TCP
        - name: pihole-web
          containerPort: 80
          protocol: TCP
