kubernetes/apps/home-automation/pihole3/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole3
  name: pihole3
spec:
  ports:
    - port: 80
  selector:
    app: pihole3
  type: ClusterIP
