kubernetes/apps/home-automation/pihole3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: pi-hole-internal
spec:
  ingressClassName: internal
  rules:
  - host: pi.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole3
            port:
              number: 80
